avro schema
